Safari365 Prod/src/objects/TL_Quotation__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>ROUND(NOW()-CreatedDate, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CoS__c</fullName>
        <label>CoS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <label>Consultant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Profit_Perc__c</fullName>
        <formula>( Sales__c - CoS__c) /Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GP %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Profit__c</fullName>
        <label>Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Cost_Price_Excl__c</fullName>
        <label>Invoice Cost Price (Excl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Cost_Price_Incl__c</fullName>
        <label>Invoice Cost Price (Incl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Gross_Profit_Excl__c</fullName>
        <label>Invoice Gross Profit (Excl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Gross_Profit_Incl__c</fullName>
        <label>Invoice Gross Profit (Incl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Selling_Price_Excl__c</fullName>
        <label>Invoice Selling Price (Excl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Selling_Price_Incl__c</fullName>
        <label>Invoice Selling Price (Incl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Newest_TLQ__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Newest TLQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Date__c</fullName>
        <label>Opportunity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>TL Quotations</relationshipLabel>
        <relationshipName>TL_Quotations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Quotation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newest and/or Primary Quotation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_by_Consultant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tick to always include in deal value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proforma_date__c</fullName>
        <label>Proforma date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Properties_Summary__c</fullName>
        <label>Properties Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_1__c</fullName>
        <label>Property 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_2__c</fullName>
        <label>Property 2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_3__c</fullName>
        <label>Property 3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quotation_Name__c</fullName>
        <label>Quotation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quotation_No__c</fullName>
        <label>Quotation No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROE__c</fullName>
        <label>ROE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receipt_Date__c</fullName>
        <label>Receipt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <label>Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TL_Properties__c</fullName>
        <label>TL Properties</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR_No__c</fullName>
        <formula>Opportunity__r.TR_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TR No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_Name__c</fullName>
        <label>Tour Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_Reference__c</fullName>
        <label>Tour Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Date__c</fullName>
        <label>Travel Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vat__c</fullName>
        <label>Vat</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>TL Quotation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Quotation_No__c</columns>
        <columns>TR_No__c</columns>
        <columns>Consultant__c</columns>
        <columns>Group_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Primary_Quotation__c</columns>
        <columns>Properties_Summary__c</columns>
        <columns>Quotation_Name__c</columns>
        <columns>Proforma_date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Receipt_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Bernelle</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Bernelle</value>
        </filters>
        <label>Bernelle</label>
    </listViews>
    <listViews>
        <fullName>Carel</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Carel</value>
        </filters>
        <label>Carel</label>
    </listViews>
    <listViews>
        <fullName>Claudia</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Claudia</value>
        </filters>
        <label>Claudia</label>
    </listViews>
    <listViews>
        <fullName>Cuan</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Cuan</value>
        </filters>
        <label>Cuan</label>
    </listViews>
    <listViews>
        <fullName>Eliane</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Eliane</value>
        </filters>
        <label>Eliane</label>
    </listViews>
    <listViews>
        <fullName>Jako</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Jako</value>
        </filters>
        <label>Jako</label>
    </listViews>
    <listViews>
        <fullName>Janine</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Janine</value>
        </filters>
        <label>Janine</label>
    </listViews>
    <listViews>
        <fullName>Jo</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Jo</value>
        </filters>
        <label>Jo</label>
    </listViews>
    <listViews>
        <fullName>Kerry</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Kerry</value>
        </filters>
        <label>Kerry</label>
    </listViews>
    <listViews>
        <fullName>Tamara</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Tamara</value>
        </filters>
        <label>Tamara</label>
    </listViews>
    <nameField>
        <displayFormat>TLQ-{00000}</displayFormat>
        <label>TL Quotation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TL Quotations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>